[tool.poetry]
name = "crud operation using fastapi"
version = "0.1.0"
description = ""
authors = ["Deedee <deedeeowoeye@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
pydantic = "^2.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
